--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
       context: .
       dockerfile: Dockerfile
     environment:
+      JWT_SECRET_KEY: "237123387258913088129406613799583093374"
       PORT: "3333"
     ports:
       - "3333:3333"
